updated list item

--- a/layouts/partials/paige/list-item.html
+++ b/layouts/partials/paige/list-item.html
@@ -47,7 +47,7 @@
 
 <div class="{{ $class }}">
     {{ with $title }}
-        <p class="paige-page-title paige-row-short"><a href="{{ $link }}">{{ . }}</a></p>
+        <p class="paige-page-title paige-row-short" style="font-size: 32px;"><a class="text-decoration-none" href="{{ $link }}">{{ . }}</a></p>
     {{ end }}
 
     {{ with $description }}
